--- a/FlaskMLPart2/templates/home.html
+++ b/FlaskMLPart2/templates/home.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ML Flask App</title>
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/Users/asherif844/p_v_e/100DaysOfCode/FlaskMLPart2/static/css/style.css') }}">
 </head>
+
 <body>
-<h2>Spam Detector for Youtube Comments</h2>
-    
+
+    <header>
+        <div class="container">
+            <div id="brandname">
+                ML App
+            </div>
+            <h2>Spam Detection For Youtube Comments</h2>
+
+        </div>
+    </header>
+
+    <div class="ml-container">
+
+        <form action="{{ url_for('predict')}}" method="POST">
+            <p>Enter Your Comment Here</p>
+            <!-- <input type="text" name="comment"/> -->
+            <textarea name="comment" rows="4" cols="50"></textarea>
+            <br />
+
+            <input type="submit" class="btn-info" value="predict">
+
+        </form>
+
+    </div>
+
+
+
+
 </body>
+
 </html>
